# study_001

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
requirements/: requirements-dev.txt
src/lib_sandbox_001/: __init__.py  playground.py
tests/: playground_test.py
